--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,9 @@
-###exportPattern("^[[:alpha:]]+")
+# Include C library
+useDynLib(foehnix, .registration = TRUE)
 
+# Export functions
 export(iwls_logit)
 export(foehnix)
-export(foehnix.noconcomitants)
-export(foehnix.unreg)
-export(foehnix.reg)
+
+
 
