--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,4 @@ BugReports: https://github.com/retostauffer/Rfoehnix/issues
 Depends: R (>= 3.0.0), zoo
 Imports: graphics
 Suggests: colorspace, glmnet
+RoxygenNote: 6.1.0
