--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,16 @@ useDynLib(foehnix, .registration = TRUE)
 # Export functions
 export(iwls_logit)
 export(foehnix)
-export(windrose)
-export(windfilter_get_indizes)
+export(foehnix_filter)
+export(tsplot)
 
 # Register S3 methods
 S3method(plot,    foehnix)
 S3method(tsplot,  foehnix)
 S3method(print,   foehnix)
 S3method(coef,    foehnix)
+S3method(fitted,  foehnix)
+S3method(predict, foehnix)
 S3method(summary, foehnix)
 S3method(logLik,  foehnix)
 S3method(AIC,     foehnix)
