--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,6 +3,7 @@ pkgdown: 1.3.0.9000
 pkgdown_sha: fa9b7502e80401db4b410086b0a8f6ab444f0c66
 articles:
   advanced_simulation: advanced_simulation.html
+  families: families.html
   foehnix: foehnix.html
   simulation: simulation.html
 
