--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,5 @@ URL:         https://github.com/retostauffer/Rfoehnix
 BugReports:  https://github.com/retostauffer/Rfoehnix/issues
 Depends:     R (>= 3.0.0), zoo
 Imports:     graphics
-Suggests:    colorspace, glmnet
+Suggests:    colorspace, glmnet, shiny
 RoxygenNote: 6.1.0
