--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: foehnix
 Type: Package
 Title: Objectiv Foehn Diagnosis
-Version: 0.0.2
-Date: 2018-12-19
+Version: 0.0.3
+Date: 2018-12-20
 Authors@R: c(person(given = "Reto", family = "Stauffer", role = c("aut", "cre"),
                     email = "Reto.Stauffer@uibk.ac.at", comment = c(ORCID = "0000-0002-3798-5507")),
              person(given = "Matthias", family = "Dusch", role = "ctb",
@@ -20,7 +20,6 @@ Encoding:    UTF-8
 LazyData:    true
 URL:         https://github.com/retostauffer/Rfoehnix
 BugReports:  https://github.com/retostauffer/Rfoehnix/issues
-Depends:     R (>= 3.0.0), zoo
-Imports:     graphics
+Depends:     R (>= 3.0.0), zoo, stats, graphics
 Suggests:    colorspace, glmnet, shiny
 RoxygenNote: 6.1.0
