Update to version 0.0-4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(predict,foehnix)
 S3method(print,coef.foehnix)
 S3method(print,foehnix)
 S3method(print,foehnix.control)
+S3method(print,foehnix.filter)
 S3method(print,summary.foehnix)
 S3method(scale,standardized)
 S3method(standardize,matrix)
