Updated to devel version v0.0-5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(BIC,foehnix)
 S3method(center,standardized)
 S3method(coef,ccmodel)
 S3method(coef,foehnix)
+S3method(coefficients,foehnix)
 S3method(edf,foehnix)
 S3method(fitted,foehnix)
 S3method(formula,foehnix)
@@ -22,6 +23,7 @@ S3method(standardize,matrix)
 S3method(summary,foehnix)
 export(add_polygon)
 export(center)
+export(ddff2uv)
 export(destandardize_coefficients)
 export(edf)
 export(foehnix)
@@ -31,6 +33,7 @@ export(is.standardized)
 export(iwls_logit)
 export(standardize)
 export(tsplot)
+export(uv2ddff)
 import(graphics)
 import(stats)
 import(utils)
