--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ S3method(print,summary.foehnix)
 S3method(scale,standardized)
 S3method(standardize,matrix)
 S3method(summary,foehnix)
+S3method(windrose,default)
+S3method(windrose,foehnix)
 export(add_polygon)
 export(center)
 export(ddff2uv)
@@ -34,6 +36,7 @@ export(iwls_logit)
 export(standardize)
 export(tsplot)
 export(uv2ddff)
+export(windrose)
 import(graphics)
 import(stats)
 import(utils)
