--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(coefficients,foehnix)
 S3method(edf,foehnix)
 S3method(fitted,foehnix)
 S3method(formula,foehnix)
+S3method(image,foehnix)
 S3method(is.standardized,matrix)
 S3method(logLik,foehnix)
 S3method(plot,foehnix)
