--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,6 +5,7 @@ articles:
   advanced_simulation: advanced_simulation.html
   families: families.html
   foehnix: foehnix.html
+  logisticregression: logisticregression.html
+  mixedmodel: mixedmodel.html
   simulation: simulation.html
-  statmodel: statmodel.html
 
