--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ import(graphics)
 import(stats)
 import(utils)
 import(zoo)
+importFrom(grDevices,gray.colors)
+importFrom(grDevices,rgb)
 importFrom(zoo,coredata)
 importFrom(zoo,index)
 importFrom(zoo,is.regular)
