--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -43,6 +43,7 @@ reference:
     - title: "Support functions"
       contents:
         - iwls_logit
+        - image
         - windrose
         - windrose.foehnix
         - tsplot
