Fixed a small issue in the pkgdown yml file, fixed two typos in documentation (GM)

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -43,7 +43,7 @@ reference:
     - title: "Support functions"
       contents:
         - iwls_logit
-        - image
+        - image.foehnix
         - windrose
         - windrose.foehnix
         - tsplot
