--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(print,foehnix.filter)
 S3method(print,summary.foehnix)
 S3method(scale,standardized)
 S3method(standardize,matrix)
+S3method(summary,ccmodel)
 S3method(summary,foehnix)
 S3method(windrose,default)
 S3method(windrose,foehnix)
