--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(windrose,foehnix)
 export(add_polygon)
 export(center)
 export(ddff2uv)
+export(demodata)
 export(destandardize_coefficients)
 export(edf)
 export(foehnix)
