--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,6 +41,7 @@ reference:
         - summary.foehnix
     - title: "Demo Data Sets"
       contents:
+        - demodata
         - ellboegen
         - sattelberg
     - title: "Support functions"
