Still working on master branch, which is uncoool. Added tsplot.control

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -51,6 +51,7 @@ reference:
         - windrose
         - windrose.foehnix
         - tsplot
+        - tsplot.control
         - add_polygon
         - windrose
         - ddff2uv
