--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(is.standardized)
 export(iwls_logit)
 export(standardize)
 export(tsplot)
+export(tsplot.control)
 export(uv2ddff)
 export(windrose)
 import(graphics)
