--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,6 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/retostauffer/Rfoehnix
 BugReports: https://github.com/retostauffer/Rfoehnix/issues
-Depends: R (>= 3.0.0), zoo, stats, graphics
+Depends: R (>= 3.0.0), zoo, stats, graphics, testthat
 Suggests: colorspace, glmnet, shiny
 RoxygenNote: 6.1.1
