--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 1.19.2.4
-pkgdown: 1.3.0.9000
-pkgdown_sha: fa9b7502e80401db4b410086b0a8f6ab444f0c66
+pkgdown: 1.3.0
+pkgdown_sha: ~
 articles:
   advanced_simulation: advanced_simulation.html
   families: families.html
