--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(uv2ddff)
 export(windrose)
 import(graphics)
 import(stats)
+import(testthat)
 import(utils)
 import(zoo)
 importFrom(grDevices,gray.colors)
