--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: R
 sudo: required
 cache: packages
 
-warnings_are_errors: true
+#warnings_are_errors: true
 before_install:
     - sudo apt-get install -y udunits-bin libudunits2-dev
     - sudo apt-get -qq update
