--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache: packages
 before_install:
     - sudo apt-get install -y udunits-bin libudunits2-dev
     - sudo apt-get -qq update
+    - tlmgr install index
+    - tlmgr install hyperref
 
 r:
     - release
