Working on code coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ S3method(center,standardized)
 S3method(coef,ccmodel)
 S3method(coef,foehnix)
 S3method(coefficients,foehnix)
+S3method(destandardize,standardized)
 S3method(edf,foehnix)
 S3method(fitted,foehnix)
 S3method(formula,foehnix)
 S3method(image,foehnix)
 S3method(is.standardized,matrix)
 S3method(logLik,foehnix)
+S3method(nobs,foehnix)
 S3method(plot,foehnix)
 S3method(predict,foehnix)
 S3method(print,coef.foehnix)
@@ -29,6 +31,7 @@ export(add_polygon)
 export(center)
 export(ddff2uv)
 export(demodata)
+export(destandardize)
 export(destandardize_coefficients)
 export(edf)
 export(foehnix)
