--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,11 @@ S3method(destandardize,standardized)
 S3method(edf,foehnix)
 S3method(fitted,foehnix)
 S3method(formula,foehnix)
+S3method(has.left,foehnix.family)
+S3method(has.right,foehnix.family)
 S3method(image,foehnix)
 S3method(is.standardized,matrix)
+S3method(is.truncated,foehnix.family)
 S3method(logLik,foehnix)
 S3method(nobs,foehnix)
 S3method(plot,foehnix)
@@ -19,6 +22,7 @@ S3method(predict,foehnix)
 S3method(print,coef.foehnix)
 S3method(print,foehnix)
 S3method(print,foehnix.control)
+S3method(print,foehnix.family)
 S3method(print,foehnix.filter)
 S3method(print,summary.foehnix)
 S3method(scale,standardized)
@@ -37,7 +41,10 @@ export(edf)
 export(foehnix)
 export(foehnix.control)
 export(foehnix_filter)
+export(has.left)
+export(has.right)
 export(is.standardized)
+export(is.truncated)
 export(iwls_logit)
 export(standardize)
 export(tsplot)
