--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(print,foehnix)
 S3method(print,foehnix.control)
 S3method(print,foehnix.family)
 S3method(print,foehnix.filter)
+S3method(print,glmnet.control)
 S3method(print,summary.foehnix)
 S3method(scale,standardized)
 S3method(standardize,matrix)
@@ -45,6 +46,7 @@ export(edf)
 export(foehnix)
 export(foehnix.control)
 export(foehnix_filter)
+export(glmnet.control)
 export(has.left)
 export(has.right)
 export(is.standardized)
