--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -52,6 +52,7 @@ reference:
         - ellboegen
         - sattelberg
         - viejas
+        - luckyfive
     - title: "Support functions"
       contents:
         - iwls_logit
