Update; see if travis is fine with it so far

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ S3method(summary,ccmodel)
 S3method(summary,foehnix)
 S3method(windrose,default)
 S3method(windrose,foehnix)
+S3method(write.csv,default)
+S3method(write.csv,foehnix)
 export(add_polygon)
 export(center)
 export(ddff2uv)
@@ -57,6 +59,7 @@ export(tsplot)
 export(tsplot.control)
 export(uv2ddff)
 export(windrose)
+export(write.csv)
 import(graphics)
 import(stats)
 import(testthat)
