--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(AIC,ccmodel)
 S3method(AIC,foehnix)
 S3method(BIC,ccmodel)
 S3method(BIC,foehnix)
+S3method(IGN,foehnix)
 S3method(center,standardized)
 S3method(coef,ccmodel)
 S3method(coef,foehnix)
@@ -38,6 +39,7 @@ S3method(windrose,default)
 S3method(windrose,foehnix)
 S3method(write.csv,default)
 S3method(write.csv,foehnix)
+export(IGN)
 export(add_polygon)
 export(center)
 export(ddff2uv)
